Add category filter to search

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,7 @@
   "editor.tabSize": 2,
   "files.autoSave": "onFocusChange",
   "files.trimTrailingWhitespace": true,
-  "ruby.intellisense": false, // Let Solargraph handle intellisense.
-  "ruby.format": "rubocop", // Set the auto-formatter for Ruby code to Rubocop.
-  "ruby.lint": { "rubocop": true }, // Use Rubocop as the default linter too.
-  "[ruby]": {
-    "editor.formatOnSave": true // Trigger auto-formatting for Ruby code.
-  },
+  "ruby.intellisense": false,
   "emmet.showSuggestionsAsSnippets": true,
   "emmet.includeLanguages": { "html.erb": "html", "erb": "html" }
 }
